# ROS_projects

./: README.md
digikey_tutorial_ws/install/: local_setup.sh  setup.sh
digikey_tutorial_ws/log/: latest_build
digikey_tutorial_ws/src/pkg_tutorial/: package.xml  setup.cfg  setup.py
digikey_tutorial_ws/src/turtlesim_controller/: package.xml  setup.py
researchtrack_ws/install/: local_setup.sh  setup.sh
researchtrack_ws/install/rt1_interfaces/share/rt1_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
researchtrack_ws/install/rt1_interfaces/share/rt1_interfaces/cmake/: ament_cmake_export_include_directories-extras.cmake  export_rt1_interfaces__rosidl_generator_cExport-noconfig.cmake  export_rt1_interfaces__rosidl_generator_pyExport.cmake  export_rt1_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  rt1_interfacesConfig.cmake  rt1_interfaces__rosidl_typesupport_cExport.cmake  rt1_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rt1_interfaces__rosidl_typesupport_introspection_cppExport.cmake
researchtrack_ws/log/: latest_build
researchtrack_ws/src/assignment1_rt/: package.xml  setup.py
researchtrack_ws/src/assignment1_rt/assignment1_rt/: TurtleManager.py  UI.py
researchtrack_ws/src/assignment1_rt/install/: local_setup.sh  setup.sh
researchtrack_ws/src/rt1_interfaces/: CMakeLists.txt
(+32 files in other folders)
